<resources>
    <string name="app_name">ViewBindingDashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_message">Введите сообщение</string>
    <string name="send">Отправить</string>
    <string name="chat">Чат</string>
    <string name="home">Home</string>
    <string name="welcome">Добро пожаловать в домашний экран!</string>
    <string name="go">Перейти</string>
    <string name="are_you_sure_you_want_to_logout">Вы уверены, что хотите выйти?</string>
    <string name="logout">Выйти</string>
    <string name="cancel">Отмена</string>
    <string name="profile">Profile</string>
    <string name="chatе">Chat</string>
    <string name="homee">Home</string>
    <string name="widget">Widget</string>
    <string name="settings">Settings</string>
    <string name="logoutt">Logout</string>
    <string name="profilee">Profile</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="settingss">Settings</string>
    <string name="enable_notifications">Включить уведомления</string>
    <string name="dark_mode">Темный режим</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="widgets">Widgets</string>
    <string name="widget_1">Widget 1</string>
    <string name="widget_2">Widget 2</string>
    <string name="widget_3">Widget 3</string>
    <string name="widget_4">Widget 4</string>
</resources>