<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilee"
        android:gravity="center"
        android:textSize="@dimen/_24sp"
        android:padding="@dimen/_16dp"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:src="@drawable/ic_profile"
        android:layout_gravity="center"
        android:padding="@dimen/_16dp"/>

    <EditText
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="@dimen/_16dp"/>

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="@dimen/_16dp"/>

    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:layout_gravity="center"
        android:padding="@dimen/_16dp"/>
</LinearLayout>
