<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:gravity="center"
        android:textSize="@dimen/_24sp"
        android:padding="@dimen/_16dp"/>

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:padding="@dimen/_8dp"/>

    <TextView
        android:id="@+id/homeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="@dimen/_18sp"
        android:padding="@dimen/_16dp"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_gravity="center"
        android:padding="@dimen/_8dp"/>
</LinearLayout>
