<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets"
        android:gravity="center"
        android:textSize="@dimen/_24sp"
        android:padding="@dimen/_16dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="@dimen/_8dp"
        android:rowOrderPreserved="true">

        <LinearLayout
            android:id="@+id/widget1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            android:background="@drawable/widget_background"
            android:layout_margin="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_1"
                android:padding="@dimen/_8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            android:background="@drawable/widget_background"
            android:layout_margin="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_2"
                android:padding="@dimen/_8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            android:background="@drawable/widget_background"
            android:layout_margin="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_3"
                android:padding="@dimen/_8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            android:background="@drawable/widget_background"
            android:layout_margin="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_4"
                android:padding="@dimen/_8dp"/>
        </LinearLayout>
    </GridLayout>
</LinearLayout>