<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16dp"
        android:background="@drawable/back"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:title="My DashBoard"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:titleTextColor="@android:color/black"
            />
        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/_4dp"
                app:cardCornerRadius="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        android:src="@drawable/ic_profile"
                        android:padding="@dimen/_16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:layout_gravity="center"
                        android:padding="@dimen/_4dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/_4dp"
                app:cardCornerRadius="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        android:src="@drawable/ic_chat"
                        android:padding="@dimen/_16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chatе"
                        android:layout_gravity="center"
                        android:padding="@dimen/_4dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Добавьте другие CardView по аналогии -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/_4dp"
                app:cardCornerRadius="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        android:src="@drawable/ic_home"
                        android:padding="@dimen/_16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homee"
                        android:layout_gravity="center"
                        android:padding="@dimen/_4dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardWidget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/_4dp"
                app:cardCornerRadius="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        android:src="@drawable/ic_widgets"
                        android:padding="@dimen/_16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget"
                        android:layout_gravity="center"
                        android:padding="@dimen/_4dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSetting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/_4dp"
                app:cardCornerRadius="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        android:src="@drawable/ic_settings"
                        android:padding="@dimen/_16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:layout_gravity="center"
                        android:padding="@dimen/_4dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/_4dp"
                app:cardCornerRadius="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        android:src="@drawable/ic_logout"
                        android:padding="@dimen/_16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logoutt"
                        android:layout_gravity="center"
                        android:padding="@dimen/_4dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>

</FrameLayout>